--- a/index.html
+++ b/index.html
@@ -46,12 +46,29 @@
             </form>
             
             <!-- List -->
+            <h6>What to Read Next?</h6>
+
             <div class="row" id="results">
-                <div class="col s12">
-                    <h6>What to Read Next?</h6>
-                    <ul></ul>
-        
+                <div class="col s5">
+                    <ul id="titleList">
+                      <li class="list-header">Title</li>
+                    </ul>
                 </div>
+                <div class="col s3">
+                  <ul id="authorList">
+                    <li class="list-header">Author</li>
+                  </ul>
+                </div>
+                <div class="col s2">
+                  <ul id="genreList">
+                    <li class="list-header">Genre</li>
+                  </ul>
+                </div>
+                <div class="col s2">
+                    <ul id="positionList">
+                      <li class="list-header">Position</li>
+                    </ul>
+                  </div>
             </div> 
 
       </div>
